--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<iframe src="https://github.com/eandr127" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
 </body>
 </html>
